data/all_generated_tests/raw_wast_tests/block_StackCorruption_1918.wast
;; 9. **Invalid Block Type with Nested Calls**:    - Define a block with an invalid block type and nested function calls that push and pop incorrect types from the stack.    - Determine if one implementation catches the block type error while the other allows stack corruption due to improper type management.

(assert_invalid
  (module 
    (func (result i32) 
      (block (param f32) 
        (call 0) 
      )
    ) 
    (func (param i32) (result f32) 
      (f32.const 0.0) 
    )
  )
  "type mismatch"
)